--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,18 +2,18 @@
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
+    "esModuleInterop": true,
     "noImplicitAny": false,
     "strictNullChecks": false,
-    "module": "esnext",
-    "target": "esnext",
-    "moduleResolution": "node",
+    "module": "commonjs",
+    "target": "ES2020",
     "sourceMap": true,
+    "moduleResolution": "node",
     "outDir": "build",
     "baseUrl": ".",
     "declaration": true,
     "lib": [
-      "esnext",
-      "dom"
+      "ES2020"
     ],
     "paths": {
       "*": [
@@ -23,5 +23,8 @@
   },
   "include": [
     "src/**/*"
+  ],
+  "exclude": [
+    "src/**/__tests__/*"
   ]
 }
