--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "types": "build/index.d.ts",
   "scripts": {
-    "build": "npm run lint && npm run build:clean && npm run compile && chmod +x build/bin/*",
+    "build": "npm run lint && npm run build:clean && npm run compile && chmod +x build/bin/* && cp .env build/.env",
     "compile": "tsc",
     "build:clean": "rm -rf build/*",
     "debug": "ts-node-dev --inspect -- src/bin/eth.ts",
